# offline-solidworks-api-docs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  pyproject.toml
01-crawl-raw/: README.md  run_crawler.py  validate_crawl.py
01-crawl-raw/metadata/: crawl_stats.json  manifest.json  urls_crawled.jsonl
01-crawl-raw/solidworks_scraper/: pipelines.py  settings.py
01-crawl-raw/tests/: __init__.py  test_pipelines.py  test_spider.py
01-crawl-toc-pages/: README.md  run_crawler.py  validate_crawl.py
01-crawl-toc-pages/metadata/: crawl_stats.json  manifest.json
01-crawl-toc-pages/solidworks_scraper/: middlewares.py  settings.py
01-crawl-toc-pages/tests/: test_pipelines.py  test_spider.py
01_crawl_toc_pages/: README.md  __init__.py  validate_crawl.py
01_crawl_toc_pages/metadata/: manifest.json  urls_crawled.jsonl
01_crawl_toc_pages/solidworks_scraper/: pipelines.py
01_crawl_toc_pages/tests/: test_spider.py
02-extract-members/: .gitignore  README.md  extract_members.py  validate_extraction.py
02-extract-members/tests/: test_extract_members.py
02_extract_members/: README.md  __init__.py  validate_extraction.py
02_extract_types/: extract_members.py  validate_extraction.py
03-extract-type-info/: README.md  extract_type_info.py  validate_extraction.py
03-extract-type-info/metadata/: api_types.xml  extraction_summary.json
03-extract-type-info/tests/: __init__.py  test_extract_type_info.py
03_crawl_type_members/: README.md  run_crawler.py  scrapy.cfg  validate_crawl.py
03_crawl_type_members/solidworks_scraper/: __init__.py  items.py  pipelines.py
03_crawl_type_members/tests/: test_pipelines.py
03_extract_type_info/: README.md  __init__.py  extract_type_info.py  validate_extraction.py
03_extract_type_info/metadata/: api_types.xml
04-extract-enum-members/: extract_enum_members.py
04-extract-enum-members/metadata/: enum_members.xml  extraction_summary.json
04-extract-enum-members/tests/: __init__.py  test_extract_enum_members.py
04_extract_type_details/: README.md  extract_type_info.py  validate_extraction.py
04_extract_type_details/metadata/: extraction_summary.json
04_extract_type_details/tests/: test_extract_type_info.py
05_crawl_examples/: run_crawler.py  validate_crawl.py
05_crawl_examples/metadata/: manifest.json  urls_crawled.jsonl
05_crawl_examples/solidworks_scraper/: __init__.py  pipelines.py
05_crawl_examples/tests/: test_pipelines.py  test_spider.py  test_url_extractor.py
05_extract_enum_members/: __init__.py  extract_enum_members.py
05_extract_type_member_details/: README.md  extract_member_details.py  validate_extraction.py
06_crawl_examples/: README.md  __init__.py  extract_example_urls.py
06_extract_enum_members/: __init__.py  extract_enum_members.py
06_parse_examples/: README.md  parse_examples.py  validate_parse.py
07_crawl_examples/: README.md  __init__.py  extract_example_urls.py  run_crawler.py  validate_crawl.py
07_generate_xmldoc/: __init__.py  generate_xmldoc.py
08_generate_xmldoc/: README.md  validate_xmldoc.py
08_parse_examples/: README.md  parse_examples.py  validate_parse.py
09_generate_xmldoc/: .gitignore  README.md  data_merger.py  generate_xmldoc.py  validate_xmldoc.py
100_crawl_programming_guide/: README.md  run_crawler.py
10_crawl_programming_guide/: README.md  run_crawler.py  validate_crawl.py
10_crawl_toc_pages/: README.md  run_crawler.py
110_extract_docs_md/: README.md  __init__.py  extract_markdown.py  html_to_markdown.py  toc_builder.py  url_rewriter.py  validate_extraction.py
11_extract_docs_md/: README.md  extract_markdown.py  html_to_markdown.py  toc_builder.py  url_rewriter.py  validate_extraction.py
120_export_llm_docs/: .gitignore  README.md  data_loader.py  example_generator.py  export_pipeline.py  functional_categories_parser.py  index_generator.py  markdown_generator.py  models.py  validate_export.py
200_export_full_release/: .gitignore  README.md  export_releases.py  validate_releases.py
20_extract_types/: README.md  extract_members.py  validate_extraction.py
30_crawl_type_members/: .gitignore  README.md  run_crawler.py  validate_crawl.py
40_extract_type_details/: README.md  __init__.py  extract_type_info.py  validate_extraction.py
50_extract_type_member_details/: README.md  __init__.py  extract_member_details.py  validate_extraction.py
60_extract_enum_members/: extract_enum_members.py
70_crawl_examples/: README.md  extract_example_urls.py  run_crawler.py  validate_crawl.py
80_parse_examples/: README.md  parse_examples.py  validate_parse.py
90_export_xmldoc/: README.md  __init__.py  generate_xmldoc.py  validate_xmldoc.py
90_generate_xmldoc/: README.md  generate_xmldoc.py  id_generator.py  validate_xmldoc.py
shared/: README.md  __init__.py  constants.py  extraction_utils.py  xmldoc_links.py
shared/tests/: test_xmldoc_links.py
(+2506 files in other folders)
