[project]
name = "offline-solidworks-api-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonlines>=4.0.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.8.6",
    "scrapy>=2.13.3",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
strict_optional = true
exclude = [
    "tests/",
    "__pycache__/",
]

# Per-module options
[[tool.mypy.overrides]]
module = "scrapy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "twisted.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonlines.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "itemadapter.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    "01-crawl-toc-pages/output",
    "02-extract-members/metadata",
    "03-extract-type-info/metadata",
    "04-extract-enum-members/metadata",
]

[tool.ruff.lint]
# Enable commonly useful rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "SIM102", # Allow nested ifs for clarity
    "SIM108", # Allow if-else instead of ternary for clarity
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "F841"]  # Allow assert and unused vars in tests
"validate_crawl.py" = ["B007"]  # Allow unused loop vars in validation script
