[project]
name = "offline-solidworks-api-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "html2text>=2024.2.26",
    "jsonlines>=4.0.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.8.6",
    "scrapy>=2.13.3",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
strict_optional = true
exclude = [
    "tests/",
    "__pycache__/",
]

# Per-module options
[[tool.mypy.overrides]]
module = "scrapy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "twisted.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonlines.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "itemadapter.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    "01_crawl_toc_pages/output",
    "02_extract_types/metadata",
    "03_crawl_type_members/output",
    "04_extract_type_details/metadata",
    "06_extract_enum_members/metadata",
    "07_crawl_examples/output",
    "08_parse_examples/output",
    "09_generate_xmldoc/output",
    "10_crawl_programming_guide/output",
    "11_extract_docs_md/output",
]

[tool.ruff.lint]
# Enable commonly useful rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "F841"]  # Allow assert and unused vars in tests
"validate_crawl.py" = ["B007"]  # Allow unused loop vars in validation script

[tool.pytest.ini_options]
pythonpath = [
    "01_crawl_toc_pages",
    "02_extract_types",
    "03_crawl_type_members",
    "04_extract_type_details",
    "06_extract_enum_members",
    "07_crawl_examples",
    "08_parse_examples",
    "09_generate_xmldoc",
    "10_crawl_programming_guide",
    "11_extract_docs_md",
    "shared",
]
addopts = "--import-mode=importlib"
